Second page added

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <div class="center_text">
             FIND YOUR LAGOM
         </div>
+        <a href="manage.html" style="text-decoration: none;">
         <div class="try">
             GET STARTED
         </div>
+        </a>
     </div>
     <div class="main_screen">
         <div class="left_side">
@@ -34,9 +36,11 @@
                     Spend every moment with a purpose
                 </div>
             </div>
+            <a href="manage.html" style="text-decoration: none;">
             <div class="join">
                 JOIN US <span class="non-visible" style="color: #2AC59F;">AND FIND PEACE</span>
             </div>
+            </a>
         </div>
         <div class="right_side">
             <div class="cont">
